--- a/genshin-page/src/App.css
+++ b/genshin-page/src/App.css
@@ -3,6 +3,8 @@
     background-attachment: scroll;
     background-size: 110%;
     background-position-y: -90px;
+    max-width: 100%;
+    display: block;
     background-repeat:repeat;
 }
 
@@ -12,4 +14,6 @@
     background-size: 110%;
     background-position-y: -90px;
     background-repeat:repeat;
+    max-width: 100%;
+    display: block;
 }
